[gd_scene load_steps=10 format=3 uid="uid://cxae2nu1rsyeo"]

[ext_resource type="Script" path="res://examples/visual_novel_balloon/balloon.gd" id="1_5w8hw"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="1_ebrfe"]
[ext_resource type="PackedScene" uid="uid://buul6y6c1g8qi" path="res://assets/scenes/Sandbox/NH/ParallaxTest.tscn" id="2_3eav1"]
[ext_resource type="Script" path="res://examples/visual_novel_balloon/Timer.gd" id="3_kjfv6"]
[ext_resource type="AudioStream" uid="uid://b1d7qvviml842" path="res://assets/sounds/music/background/swaying03.wav" id="4_ykr5b"]
[ext_resource type="AudioStream" uid="uid://bk584x3ftq866" path="res://assets/sounds/ambiance/197124__avakas__empty-train-moving-slowly-recorded-inside-passenger-car.wav" id="6_ixxjm"]

[sub_resource type="Gradient" id="Gradient_jmrjs"]
offsets = PackedFloat32Array(0, 0.126667, 0.273333, 0.433333, 0.593333, 0.786667, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.372549, 0.231373, 1, 1, 1, 0.360784, 1, 0.141176, 0.627451, 0.247059, 1, 0.196078, 0.596078, 0.882353, 1, 0.433301, 0.422244, 0.917068, 1, 0.247059, 0.258824, 0.768627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr5y7"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma11q"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.301961, 0.301961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="VisualNovelBalloon" type="CanvasLayer"]
script = ExtResource("1_5w8hw")

[node name="ParallaxTest" parent="." instance=ExtResource("2_3eav1")]

[node name="Background" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -195.55
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3
stretch_mode = 6

[node name="Slot0" type="Marker2D" parent="."]
position = Vector2(187, 700)

[node name="Slot1" type="Marker2D" parent="."]
position = Vector2(364, 700)

[node name="Slot2" type="Marker2D" parent="."]
position = Vector2(559, 700)

[node name="Slot3" type="Marker2D" parent="."]
position = Vector2(774, 700)

[node name="Slot4" type="Marker2D" parent="."]
position = Vector2(953, 700)

[node name="Balloon" type="Control" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -194.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0588235, 0.105882, 0.129412, 1)

[node name="Margin" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="DialogueLabel" parent="Balloon/Margin" instance=ExtResource("1_ebrfe")]
layout_mode = 2

[node name="RainbowSparkles" type="CPUParticles2D" parent="Balloon"]
position = Vector2(900, -100)
emitting = false
amount = 48
explosiveness = 0.22
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 141.91
initial_velocity_max = 162.12
angular_velocity_min = 43.63
angular_velocity_max = 58.18
radial_accel_min = -1.85
tangential_accel_min = 34.34
tangential_accel_max = 34.34
angle_min = -538.2
angle_max = 184.6
scale_amount_min = 5.0
scale_amount_max = 5.0
color_initial_ramp = SubResource("Gradient_jmrjs")

[node name="Responses" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.645
anchor_top = 0.653
anchor_right = 0.978
anchor_bottom = 0.653
offset_left = -344.04
offset_top = -52.144
offset_right = -343.656
offset_bottom = -0.144043
grow_vertical = 0

[node name="ResponseTemplate" type="RichTextLabel" parent="."]
offset_left = 57.0
offset_top = 949.0
offset_right = 408.0
offset_bottom = 995.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_sr5y7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ma11q")
text = "Response template"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="TimerContain" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 454.0
offset_top = 27.0
offset_right = 654.0
offset_bottom = 67.0

[node name="Timer" type="ColorRect" parent="TimerContain"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 40.0
script = ExtResource("3_kjfv6")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ykr5b")
autoplay = true

[node name="ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ixxjm")
volume_db = -8.0
autoplay = true

[node name="AudioSFX" type="AudioStreamPlayer" parent="."]

[connection signal="finish_pats" from="." to="." method="_on_finish_pats"]
[connection signal="timer_start" from="." to="TimerContain/Timer" method="_on_visual_novel_balloon_timer_start"]
[connection signal="timer_stop" from="." to="TimerContain/Timer" method="_on_visual_novel_balloon_timer_stop"]
[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="timerFinished" from="TimerContain/Timer" to="." method="_finish_response_timer"]
